--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "eslint-config-k4geno": "^1.0.0",
     "prisma": "^4.16.2"
   }
