--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"commonjs\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.4",
+    "@tanstack/react-query": "^4.29.25",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
@@ -31,12 +36,13 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
-    "uuid": "^9.0.0"
+    "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2",
     "eslint-config-k4geno": "^1.0.0",
-    "prisma": "^4.16.2"
+    "prisma": "^4.16.2",
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   }
 }
