--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-query": "^4.29.25",
     "@types/node": "20.4.1",
@@ -37,7 +38,8 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2",
